syntax="proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package srcs.chat.generated;

option java_multiple_files = true;

message SubscribeMessage {
  string pseudo = 1;
  string host = 2;
  int32 port = 3;
}

message ChatMessage {
  string pseudo = 1;
  string content = 2;
}

message ListChatterMessage {
  repeated string chatter = 1;
}

service Chat {
  rpc subscribe(SubscribeMessage) returns(google.protobuf.BoolValue);
  rpc send(ChatMessage) returns(google.protobuf.Int32Value);
  rpc listChatter(google.protobuf.Empty) returns(ListChatterMessage);
  rpc unsubscribe(google.protobuf.StringValue) returns(google.protobuf.Empty);
}

service MessageReceiver {
  rpc newMessage(ChatMessage) returns(google.protobuf.Empty);
}